// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deserialize a complex leaf node with bold and emphasis 1`] = `
{
  "children": [
    {
      "b": true,
      "i": true,
      "text": "bold and italic",
    },
  ],
  "type": "p",
}
`;

exports[`Deserialize a complex leaf node with delete and bold 1`] = `
{
  "children": [
    {
      "b": true,
      "s": true,
      "text": "strikethrough and bold",
    },
  ],
  "type": "p",
}
`;

exports[`Deserialize a complex leaf node with delete and italic 1`] = `
{
  "children": [
    {
      "i": true,
      "s": true,
      "text": "strikethrough and italic",
    },
  ],
  "type": "p",
}
`;

exports[`Deserialize a complex leaf node with emphasis and bold 1`] = `
{
  "children": [
    {
      "b": true,
      "i": true,
      "text": "italic and bold",
    },
  ],
  "type": "p",
}
`;

exports[`Deserialize a leaf node with inline code directly inline 1`] = `
{
  "children": [
    {
      "code_line": true,
      "text": "inline code",
    },
  ],
  "type": "p",
}
`;

exports[`Deserialize a leaf node with just bold 1`] = `
{
  "children": [
    {
      "b": true,
      "text": "bold text",
    },
  ],
  "type": "p",
}
`;

exports[`Deserialize a leaf node with just italic 1`] = `
{
  "children": [
    {
      "i": true,
      "text": "Italic text",
    },
  ],
  "type": "p",
}
`;

exports[`Deserialize a leaf node with just strikethrough 1`] = `
{
  "children": [
    {
      "s": true,
      "text": "strikethrough text",
    },
  ],
  "type": "p",
}
`;

exports[`Handles cases where leafs have metadata attached 1`] = `
{
  "children": [
    {
      "children": [
        {
          "b": true,
          "i": true,
          "s": true,
          "text": "strikethrough text",
        },
      ],
      "type": "p",
    },
  ],
  "type": "a",
  "url": "https://jackhanford.com",
}
`;
